data/derived/comb/progs/unify/prog5478.ml.out
Characters 8-11:
  let _ = abs -1.0;;
          ^^^
Error: This expression has type int -> int
       but an expression was expected of type int
